tests/snapshots/run_wpt_conformance__coreml_greater_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater.https.any.js greater float16 0D scalar, coreml
 greater :: greater float16 0D scalar: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [3.685546875]; inputB: [1.7236328125]
  expected output: [1]
  actual output: [0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[];
    inputB: f16[];
  }

  nodes {
    [output] = greater(inputA, inputB, label="");
  }

  outputs { output; }
}
