tests/snapshots/run_wpt_conformance__coreml_greater_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
greater.https.any.js greater float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([101, 197, 48, 199, 55, 194, 250, 68, 29, 69, 40, 190, 168, 61, 125, 187, 8, 198, 7, 194, 120, 49, 101, 71, 46, 71, 212, 196, 10, 192, 137, 194, 121, 72, 239, 197, 168, 57, 142, 65, 213, 59, 65, 198, 105, 68, 198, 198]);
    operand_1: f16[24] @bytes([40, 198, 6, 196, 244, 69, 157, 64, 138, 193, 197, 187, 228, 60, 151, 68, 141, 72, 255, 196, 207, 196, 118, 72, 52, 59, 175, 193, 168, 193, 61, 72, 215, 199, 155, 72, 251, 68, 4, 193, 133, 196, 45, 72, 41, 198, 228, 57]);
  }

  nodes {
    [output] = greater(operand_0, operand_1, label="");
  }

  outputs { output; }
}
